--- a/docs/latexhelp/doc.tex
+++ b/docs/latexhelp/doc.tex
@@ -1,3 +1,397 @@
+\section{/Library}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Do not print parser progress (default)
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -verbose
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Try to rduce the initial domains of variables, and output them.
+    This is in general not useful for users, but is provided for other systems.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Output a Minion instance with some basic reasoning performed to
+    reduce the size of the file. This file should produce identical
+    output the original instance but may solve faster.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To compress a file 'infile.minion' to a file 'smaller.minion'
+
+       minion infile.minion -outputCompressed smaller.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Print solutions (default).
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Do not print solutions.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Print only solutions and a summary at the end.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    In optimisation problems, only print the optimal value, and
+    not intermediate values.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Print parser progress.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -quiet
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Allows the user to choose the level of consistency to be enforced
+    during search.
+
+    See entry 'help switches -preprocess' for details of the available
+    levels of consistency.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To enforce SSAC during search:
+
+       minion -prop-node SSAC input.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -preprocess
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Automatically generate a short tuple list from each long tuple list.
+
+    The methods of compression are:
+
+    none : No short tuple list generated (default)
+    eager : Use a fast algorithm to produce a reasonable short tuple list (best
+    as first choice)
+    lazy : Work harder (possibly exponentially) to produce a shorter short tuple
+    list
+    keeplong : Make a 'short tuple list' with no short tuples (only for
+    benchmarking)
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+
+    This switch allows the user to choose what level of preprocess is
+    applied to their model before search commences.
+
+    The choices are:
+
+    - GAC
+    - generalised arc consistency (default)
+    - all propagators are run to a fixed point
+    - if some propagators enforce less than GAC then the model will
+    not necessarily be fully GAC at the outset
+
+    - SACBounds
+    - singleton arc consistency on the bounds of each variable
+    - AC can be achieved when any variable lower or upper bound is a
+    singleton in its own domain
+
+    - SAC
+    - singleton arc consistency
+    - AC can be achieved in the model if any value is a singleton in
+    its own domain
+
+    - SSACBounds
+    - singleton singleton bounds arc consistency
+    - SAC can be achieved in the model when domains are replaced by either
+    the singleton containing their upper bound, or the singleton containing
+    their lower bound
+
+    - SSAC
+    - singleton singleton arc consistency
+    - SAC can be achieved when any value is a singleton in its own domain
+
+    These are listed in order of roughly how long they take to
+    achieve. Preprocessing is a one off cost at the start of search. The
+    success of higher levels of preprocessing is problem specific; SAC
+    preprocesses may take a long time to complete, but may reduce search
+    time enough to justify the cost.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To enforce SAC before search:
+
+       minion -preprocess SAC myinputfile.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -prop-node
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Do not check solutions for correctness before printing them out.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    This option is the default on non-DEBUG executables.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Check solutions for correctness before printing them out.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    This option is the default for DEBUG executables.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Print out the branching decisions and variable states at each node.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To stop search after N nodes, do
+
+       minion -nodelimit N myinput.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -cpulimit
+    help switches -timelimit
+    help switches -sollimit
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To stop search after N solutions have been found, do
+
+       minion -sollimit N myinput.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -cpulimit
+    help switches -nodelimit
+    help switches -timelimit
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To stop search after N seconds (real time), do
+
+       minion -timelimit N myinput.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -cpulimit
+    help switches -nodelimit
+    help switches -sollimit
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    By default Minion adds all variables to the varorder, to ensure that all
+    variables
+    are branched assigned before a solution is outputted. This option disables
+    that
+    behaviour. This means minion Minion may output solutions incorrectly, or
+    incorrect
+    numbers of solutions. This flag is provided because some users require this
+    low-level control over the search, but is in general useless and dangerous.
+    In particular,
+    it will not speed up search (except when the speed up is due to producing
+    garbage of course!)
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To stop search after N seconds (CPU time), do
+
+       minion -cpulimit N myinput.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    help switches -timelimit
+    help switches -nodelimit
+    help switches -sollimit
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Randomises the ordering of the decision variables, and the value ordering.
+    If the input file specifies as ordering it will randomly permute this. If no
+    ordering is
+    specified a random permutation of all the variables is used.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Set the pseudorandom seed to N. This allows 'random' behaviour to be
+    repeated in different runs of minion.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Append a line of data about the current run of minion to a named file.
+    This data includes minion version information, arguments to the
+    executable, build and solve time statistics, etc. See the file itself
+    for a precise schema of the supplied information.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To add statistics about solving myproblem.minion to mystats.txt do
+
+       minion -tableout mystats.txt myproblem.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Append all solutionsto a named file.
+    Each solution is placed on a line, with no extra formatting.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    To add the solutions of myproblem.minion to mysols.txt do
+
+       minion -solsout mysols.txt myproblem.minion
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Write a resume file on timeout or being killed.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Do not write a resume file on timeout or being killed. (default)
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    Give name of gap executable (defaults to gap.sh)
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    When Minion is terminated before the end of search, write out two new input
+    files that split the remaining search space in half. Each of the files will
+    have
+    all the variables and constraints of the original file plus constraints that
+    rule out the search already done. In addition, the domain of the variable
+    under
+    consideration when Minion was stopped is split in half with each of the new
+    input files considering a different half.
+
+    This feature is experimental and intended to facilitate parallelisation --
+    to
+    parallelise the solving of a single constraint problem, stop and split
+    repeatedly. Please note that large-scale testing of this feature was limited
+    to
+    Linux systems and it might not work on others (especially Windows).
+
+    The name of the new input files is composed of the name of the original
+    instance, the string 'resume', a timestamp, the process ID of Minion, the
+    name
+    of the variable whose domain is being split and 0 or 1. Each of the new
+    input
+    files has a comment identifying the name of the input file which it was
+    split
+    from. Similarly, Minion's output identifies the new input files it writes
+    when
+    splitting.
+
+    The new input files can be run without any special flags.
+
+    This flag is intended to be used with the -timelimit, -sollimit, -nodelimit
+    or -cpulimit flags. Please note that changing other flags between
+    runs (such as -varorder) may have unintended consequences.
+
+    Implies -makeresume.
+\end{verbatim}
+}
+\paragraph{/Network}
+{\footnotesize
+\begin{verbatim}
+    The flag -split-stderr has the same function as the flag -split, however the
+    two new Minion input files are sent to standard error rather than written to
+    files.
+
+    See documentation for -split.
+\end{verbatim}
+}
 \section{constraints}
 \paragraph{Description}
 {\footnotesize
@@ -74,14 +468,30 @@ See
 for the same constraint that enforces GAC.
 \end{verbatim}
 }
+\section{constraints alldiffciaran}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Forces the input vector of variables to take distinct values. This is for experiment only. 
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+This constraint enforces an unknown consistency.
+\end{verbatim}
+}
 \section{constraints alldiffmatrix}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-For a latin square this constraint is placed on the whole matrix once for each value.
-It ensures there is a bipartite matching between rows and columns where the edges
-in the matching correspond to a pair (row, column) where the variable in position
-(row,column) in the matrix may be assigned to the given value. 
+For a latin square this constraint is placed on the whole matrix once for each
+value.
+It ensures there is a bipartite matching between rows and columns where the
+edges
+in the matching correspond to a pair (row, column) where the variable in
+position
+(row,column) in the matrix may be assigned to the given value.
 \end{verbatim}
 }
 \paragraph{Example}
@@ -393,7 +803,7 @@ the number of occurrences of the value in the primary variables.
 
 This constraint only restricts the number of occurrences of the values in
 the value list. There is no restriction on the occurrences of other values.
-Therefore the semantics of gcc are identical to a set of occurrence 
+Therefore the semantics of gcc are identical to a set of occurrence
 constraints:
 
 occurrence([primary variables], val1, cap1)
@@ -433,7 +843,7 @@ gccweak constraint.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-The Generalized Cardinality Constraint (GCC) (weak variant) constrains the 
+The Generalized Cardinality Constraint (GCC) (weak variant) constrains the
 number of each value that a set of variables can take.
 
 gccweak([primary variables], [values of interest], [capacity variables])
@@ -443,7 +853,7 @@ the number of occurrences of the value in the primary variables.
 
 This constraint only restricts the number of occurrences of the values in
 the value list. There is no restriction on the occurrences of other values.
-Therefore the semantics of gccweak are identical to a set of occurrence 
+Therefore the semantics of gccweak are identical to a set of occurrence
 constraints:
 
 occurrence([primary variables], val1, cap1)
@@ -474,7 +884,7 @@ capacity variables, then enforces GAC over the primary variables only.  Then the
 bounds of the capacity variables are updated by counting values in the domains
 of the primary variables.
 
-The consistency over the capacity variables is weaker than the gcc constraint, 
+The consistency over the capacity variables is weaker than the gcc constraint,
 hence the name gccweak.
 \end{verbatim}
 }
@@ -587,9 +997,9 @@ The constraint
 
    ineq(x, y, k)
 
-ensures that 
+ensures that
 
-   x <= y + k 
+   x <= y + k
 
 in any solution.
 \end{verbatim}
@@ -761,7 +1171,8 @@ for the opposite constraint.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-MDDC (mddc) is an implementation of MDDC(sp) by Cheng and Yap. It enforces GAC on a
+MDDC (mddc) is an implementation of MDDC(sp) by Cheng and Yap. It enforces GAC
+on a
 constraint using a multi-valued decision diagram (MDD).
 
 The MDD required for the propagator is constructed from a set of satisfying
@@ -837,10 +1248,10 @@ help constraints eq
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    mod_undefzero(x,y,z)
 
-is the same as mod except the constraint is always 
+is the same as mod except the constraint is always
 true when y = 0, instead of false.
 
 This constraint exists for certain special requirements.
@@ -859,7 +1270,7 @@ help constraints mod
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    modulo(x,y,z)
 
 ensures that x%y=z i.e. z is the remainder of dividing x by y.
@@ -931,10 +1342,11 @@ help input tuplelist
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    nvaluegeq(V,x)
 
-ensures that there are >= x different values assigned to the list of variables V.
+ensures that there are >= x different values assigned to the list of variables
+V.
 \end{verbatim}
 }
 \section{constraints nvalueleq}
@@ -942,10 +1354,11 @@ ensures that there are >= x different values assigned to the list of variables V
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    nvalueleq(V,x)
 
-ensures that there are <= x different values assigned to the list of variables V.
+ensures that there are <= x different values assigned to the list of variables
+V.
 \end{verbatim}
 }
 \section{constraints occurrence}
@@ -1028,7 +1441,7 @@ help constraints occurrencegeq
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    pow(x,y,z)
 
 ensures that x^y=z.
@@ -1108,6 +1521,59 @@ See
 \begin{verbatim}
 See
    help constraints reification
+\end{verbatim}
+}
+\section{constraints shortctuplestr2}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+
+This constraint extends the ShortSTR2 algorithm to support short c-tuples
+(that is, short tuples which contain can contain more than one domain value
+per constraint).
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+
+Input format is similar to that used by other short tuple constraints,
+such as haggisgac or shortstr2. Refer to the haggisgac and
+shorttuplelist pages for more information.
+
+The important change is that more than one literal may be given for each
+variable. Variables which are not mentioned are assumed to be allowed
+to take any value
+
+Example:
+
+**SHORTTUPLELIST**
+mycon 4
+[(0,0),(0,1),(3,0)]
+[(1,0),(1,2),(3,0)]
+[(2,0),(3,0),(3,1)]
+[(0,1),(1,1),(2,1),(3,1)]
+
+**CONSTRAINTS**
+shortctuplestr2([x1,x2,x3,x4], mycon)
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help input shorttuplelist
+help constraints table
+help constraints negativetable
+help constraints haggisgac
+help constraints haggisgac-stable
+help constraints shortstr2
+\end{verbatim}
+}
+\section{constraints shortcuplestr2}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+This constraint enforces generalized arc consistency.
 \end{verbatim}
 }
 \section{constraints shortstr2}
@@ -1416,34 +1882,6 @@ ensures that at least one of the constraints C1,...,Cn is true.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
- The constraint 
- 
- watchelement(vec, i, e)
- 
- specifies that, in any solution, vec[i] = e and i is in the range 
- [0 .. |vec|-1].
-\end{verbatim}
-}
-\paragraph{Notes}
-{\footnotesize
-\begin{verbatim}
- Enforces generalised arc consistency.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
- See entry
- 
- help constraints element
- 
- for details of an identical constraint that enforces a lower level of
- consistency.
-\end{verbatim}
-}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
 The constraint
 
    watchelement(vec, i, e)
@@ -1470,23 +1908,6 @@ consistency.
 \end{verbatim}
 }
 \section{constraints watchelement\textunderscore one}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
- This constraint is identical to watchelement, except the vector
- is indexed from 1 rather than from 0.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
- See entry
- 
- help constraints watchelement
- 
- for details of watchelement which watchelement_one is based on.
-\end{verbatim}
-}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
@@ -1899,7 +2320,8 @@ differing only in the auxiliary variables, only one is reported by minion.
 
       where
 
-   <ORDER>::= STATIC | SDF | SRF | LDF | ORIGINAL | WDEG | CONFLICT | DOMOVERWDEG
+   <ORDER>::= STATIC | SDF | SRF | LDF | ORIGINAL | WDEG | CONFLICT |
+DOMOVERWDEG
 
 The value ordering allows the user to specify an instantiation order
 for the variables involved in the variable order, either ascending (a)
@@ -1938,8 +2360,9 @@ See also
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-A shorttuplelist section lists of allowed tuples for haggisgac
-and other constraints which accept short tuple lists.
+A shorttuplelist section lists of allowed tuples for haggisgac,
+shortstr2, shortctuplestr2 and other constraints which accept
+short tuple lists.
 
 The required format is
 
@@ -1985,6 +2408,13 @@ variable. For example:
 Represents 'If the variable at index 0 is 0, and the variable at index
 3 is 0, then the constraint is true'.
 
+Some constraints (currently just shortctuplestr2) allow more than
+one literal per variable for example:
+
+[(0,0),(0,1),(3,0)]
+
+Represents 'If the variable at index 0 is 0 or 1, and the variable at index
+3 is 0, then the constraint is true'.
 
 Note that some tuples are double-represented in the example 'mycon'.
 The first 3 short tuples all allow the assignment '0 0 0 0'. This is fine.
@@ -2081,43 +2511,6 @@ below contains all available switches. For example to see help on
 replacing 'minion' by the name of the executable you're using.
 \end{verbatim}
 }
-\section{switches -check}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Check solutions for correctness before printing them out.
-\end{verbatim}
-}
-\paragraph{Notes}
-{\footnotesize
-\begin{verbatim}
-This option is the default for DEBUG executables.
-\end{verbatim}
-}
-\section{switches -cpulimit}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-To stop search after N seconds (CPU time), do
-
-   minion -cpulimit N myinput.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -timelimit
-help switches -nodelimit
-help switches -sollimit
-\end{verbatim}
-}
-\section{switches -dumptree}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Print out the branching decisions and variable states at each node.
-\end{verbatim}
-}
 \section{switches -findallsols}
 \paragraph{Description}
 {\footnotesize
@@ -2126,373 +2519,12 @@ Find all solutions and count them. This option is ignored if the
 problem contains any minimising or maximising objective.
 \end{verbatim}
 }
-\section{switches -fullprop}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Disable incremental propagation. This should always slow down search while producing exactly the same
-search tree. Only available in a DEBUG executable.
-\end{verbatim}
-}
-\section{switches -gap}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Give name of gap executable (defaults to gap.sh)
-\end{verbatim}
-}
-\section{switches -makeresume}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Write a resume file on timeout or being killed.
-\end{verbatim}
-}
-\section{switches -map-long-short}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Automatically generate a short tuple list from each long tuple list.
-
-The methods of compression are:
-
-none : No short tuple list generated (default)
-eager : Use a fast algorithm to produce a reasonable short tuple list (best as first choice)
-lazy : Work harder (possibly exponentially) to produce a shorter short tuple list
-keeplong : Make a 'short tuple list' with no short tuples (only for benchmarking)
-\end{verbatim}
-}
-\section{switches -nocheck}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Do not check solutions for correctness before printing them out.
-\end{verbatim}
-}
-\paragraph{Notes}
-{\footnotesize
-\begin{verbatim}
-This option is the default on non-DEBUG executables.
-\end{verbatim}
-}
-\section{switches -nodelimit}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-To stop search after N nodes, do
-
-   minion -nodelimit N myinput.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -cpulimit
-help switches -timelimit
-help switches -sollimit
-\end{verbatim}
-}
-\section{switches -noprintsols}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Do not print solutions.
-\end{verbatim}
-}
-\section{switches -noresume}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Do not write a resume file on timeout or being killed. (default)
-\end{verbatim}
-}
-\section{switches -outputCompressed}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Output a Minion instance with some basic reasoning performed to
-reduce the size of the file. This file should produce identical
-output the original instance but may solve faster.
-\end{verbatim}
-}
-\paragraph{Example}
-{\footnotesize
-\begin{verbatim}
-To compress a file 'infile.minion' to a file 'smaller.minion'
-
-   minion infile.minion -outputCompressed smaller.minion
-\end{verbatim}
-}
-\section{switches -outputCompressedDomains}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Try to rduce the initial domains of variables, and output them.
-This is in general not useful for users, but is provided for other systems.
-\end{verbatim}
-}
-\section{switches -preprocess}
-\paragraph{}
-{\footnotesize
-\begin{verbatim}
-
-This switch allows the user to choose what level of preprocess is
-applied to their model before search commences.
-
-The choices are:
-
-- GAC
-- generalised arc consistency (default)
-- all propagators are run to a fixed point
-- if some propagators enforce less than GAC then the model will
-not necessarily be fully GAC at the outset
-
-- SACBounds
-- singleton arc consistency on the bounds of each variable
-- AC can be achieved when any variable lower or upper bound is a
-singleton in its own domain
-
-- SAC
-- singleton arc consistency
-- AC can be achieved in the model if any value is a singleton in
-its own domain
-
-- SSACBounds
-- singleton singleton bounds arc consistency
-- SAC can be achieved in the model when domains are replaced by either
-the singleton containing their upper bound, or the singleton containing
-their lower bound
-
-- SSAC
-- singleton singleton arc consistency
-- SAC can be achieved when any value is a singleton in its own domain
-
-These are listed in order of roughly how long they take to
-achieve. Preprocessing is a one off cost at the start of search. The
-success of higher levels of preprocessing is problem specific; SAC
-preprocesses may take a long time to complete, but may reduce search
-time enough to justify the cost.
-\end{verbatim}
-}
-\paragraph{Example}
-{\footnotesize
-\begin{verbatim}
-To enforce SAC before search:
-
-   minion -preprocess SAC myinputfile.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -prop-node
-\end{verbatim}
-}
-\section{switches -printonlyoptimal}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-In optimisation problems, only print the optimal value, and
-not intermediate values.
-\end{verbatim}
-}
-\section{switches -printsols}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Print solutions (default).
-\end{verbatim}
-}
-\section{switches -printsolsonly}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Print only solutions and a summary at the end.
-\end{verbatim}
-}
-\section{switches -prop-node}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Allows the user to choose the level of consistency to be enforced
-during search.
-
-See entry 'help switches -preprocess' for details of the available
-levels of consistency.
-\end{verbatim}
-}
-\paragraph{Example}
-{\footnotesize
-\begin{verbatim}
-To enforce SSAC during search:
-
-   minion -prop-node SSAC input.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -preprocess
-\end{verbatim}
-}
-\section{switches -quiet}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Do not print parser progress (default)
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -verbose
-\end{verbatim}
-}
-\section{switches -randomiseorder}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Randomises the ordering of the decision variables, and the value ordering.
-If the input file specifies as ordering it will randomly permute this. If no ordering is
-specified a random permutation of all the variables is used.
-\end{verbatim}
-}
-\section{switches -randomseed}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Set the pseudorandom seed to N. This allows 'random' behaviour to be
-repeated in different runs of minion.
-\end{verbatim}
-}
 \section{switches -redump}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
 Print the minion input instance file to standard out. No search is
 carried out when this switch is used.
-\end{verbatim}
-}
-\section{switches -skipautoaux}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-By default Minion adds all variables to the varorder, to ensure that all variables
-are branched assigned before a solution is outputted. This option disables that
-behaviour. This means minion Minion may output solutions incorrectly, or incorrect
-numbers of solutions. This flag is provided because some users require this 
-low-level control over the search, but is in general useless and dangerous. In particular,
-it will not speed up search (except when the speed up is due to producing garbage of course!)
-\end{verbatim}
-}
-\section{switches -sollimit}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-To stop search after N solutions have been found, do
-
-   minion -sollimit N myinput.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -cpulimit
-help switches -nodelimit
-help switches -timelimit
-\end{verbatim}
-}
-\section{switches -solsout}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Append all solutionsto a named file.
-Each solution is placed on a line, with no extra formatting.
-\end{verbatim}
-}
-\paragraph{Example}
-{\footnotesize
-\begin{verbatim}
-To add the solutions of myproblem.minion to mysols.txt do
-
-   minion -solsout mysols.txt myproblem.minion
-\end{verbatim}
-}
-\section{switches -split}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-When Minion is terminated before the end of search, write out two new input
-files that split the remaining search space in half. Each of the files will have
-all the variables and constraints of the original file plus constraints that
-rule out the search already done. In addition, the domain of the variable under
-consideration when Minion was stopped is split in half with each of the new
-input files considering a different half.
-
-This feature is experimental and intended to facilitate parallelisation -- to
-parallelise the solving of a single constraint problem, stop and split
-repeatedly. Please note that large-scale testing of this feature was limited to
-Linux systems and it might not work on others (especially Windows).
-
-The name of the new input files is composed of the name of the original
-instance, the string 'resume', a timestamp, the process ID of Minion, the name
-of the variable whose domain is being split and 0 or 1. Each of the new input
-files has a comment identifying the name of the input file which it was split
-from. Similarly, Minion's output identifies the new input files it writes when
-splitting.
-
-The new input files can be run without any special flags.
-
-This flag is intended to be used with the -timelimit, -sollimit, -nodelimit
-or -cpulimit flags. Please note that changing other flags between
-runs (such as -varorder) may have unintended consequences.
-
-Implies -makeresume.
-\end{verbatim}
-}
-\section{switches -split-stderr}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-The flag -split-stderr has the same function as the flag -split, however the
-two new Minion input files are sent to standard error rather than written to files. 
-
-See documentation for -split. 
-\end{verbatim}
-}
-\section{switches -tableout}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Append a line of data about the current run of minion to a named file.
-This data includes minion version information, arguments to the
-executable, build and solve time statistics, etc. See the file itself
-for a precise schema of the supplied information.
-\end{verbatim}
-}
-\paragraph{Example}
-{\footnotesize
-\begin{verbatim}
-To add statistics about solving myproblem.minion to mystats.txt do
-
-   minion -tableout mystats.txt myproblem.minion
-\end{verbatim}
-}
-\section{switches -timelimit}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-To stop search after N seconds (real time), do
-
-   minion -timelimit N myinput.minion
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -cpulimit
-help switches -nodelimit
-help switches -sollimit
 \end{verbatim}
 }
 \section{switches -varorder}
@@ -2521,19 +2553,6 @@ The available orders are:
 - random - random variable ordering
 
 - static - lexicographical ordering
-\end{verbatim}
-}
-\section{switches -verbose}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-Print parser progress.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help switches -quiet
 \end{verbatim}
 }
 \section{variables}
